--- a/css/apresentação.css
+++ b/css/apresentação.css
@@ -1,19 +1,10 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
 }
 
- h1{
-    
- position: relative;
 
-color: #3852B5;
-font-size: 40px;
-text-align: center;
-
- }
 input{
     margin: auto;
     background-color:#c3cfff ;
@@ -23,22 +14,6 @@ input{
        outline: none;
      width: 300px;
    }
-.ranking{
-    background-color: #c3cfff41;
-    width: 500px;
-    height: 500px;
-    text-align: center;
-    transform: translateX(-200px);
-  
-}
-.rankName{
-    width: 300px;
-    margin: 0 auto;
-    background-color: #c3cfff;
-    height: 30px;
-    color: #fff;
-    padding: 5px;
-}
 .fases{
     width: 50vw;
 }
@@ -57,12 +32,15 @@ input{
     flex-direction: row;
     padding: 30px;
     justify-content: center;
-    margin: 10% auto 5%;
+    margin: 6% auto 7%;
     margin-right: auto;
     align-content: center;
+    text-align: center;
 }
+
 #robo{
     width: 550px;
+    height:500px;
 }
 .sobrenos {
     background-color: #3852b5;
@@ -93,29 +71,13 @@ input{
     
     
 @media(max-width:1992px){
-    .ranking{
-        margin-left: 600px;
-    }
     .comeceaqui img{
         transition: transform 0.3s ease-in-out;
         width: 500px;
         margin-top: -100px;
     }
 }
-@media(max-width:1550px){
-    .ranking{
-        margin-left: 300px;
-        
-    }
-    .rankName{
-        width: 90%;
-    }
-}
 @media(max-width:1230px){
-    .ranking{
-        margin:70px auto;
-        width: 300px;
-    }
     input{
         width: 200px;
     }
@@ -128,21 +90,15 @@ input{
         justify-content: center;
         margin: 10% auto;
     }
-    .ranking{
-        transform: translateX(0px);
-    }
     }
 @media(max-width:999px) {
-    .ranking{
-        width: 650px;
-        margin-left: 0 auto;
-    }
     #robo{
         display: none;
      }
     .center{
         align-content: center;
         margin: 7% auto;
+        width: 74vw;
     }
     .comeceaqui img{
         margin: 7% auto;
@@ -154,9 +110,6 @@ input{
     }
 }
 @media(max-width:700px){
-    .ranking{
-    width: 80%;
-   }
     input{
         width: 150px;
     }
@@ -166,10 +119,6 @@ input{
     }
 }
 @media(max-width:550px){
-    .ranking{
-    width: 95%;
-    margin: 50px auto;
-   }
     .comeceaqui img{
         width: 70%;
     }
