--- a/css/ranking.css
+++ b/css/ranking.css
@@ -6,8 +6,7 @@
     background-color: #c3cfff41;
     width: 500px;
     text-align: center;
-    padding: 20px;
-    margin:0 auto ;
+    margin:0 20px ;
   
 }
 .rankName{
@@ -17,6 +16,9 @@
     height: 30px;
     color: #fff;
     padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .ranking h1{
     
@@ -27,25 +29,16 @@
    text-align: center;
    
 }
-@media(max-width:1550px){
-    .ranking{
-        margin-left: 300px;
-        
-    }
-    .rankName{
-        width: 90%;
-    }
-}
 @media(max-width:1230px){
     .ranking{
-        margin:70px 0;
-        width: 300px;
+        margin:70px auto;
+        width: 500px;
     }
 
     }
 @media(max-width:999px) {
     .ranking{
-        width: 650px;
+        width: 500px;
         margin: 50px auto;
     }
  
