--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -30,6 +30,7 @@
   border-radius: 10px;
   padding: 30px;
   text-align: left;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1);
 }
 .florCanto img{
   transform: translateX(-10px);
@@ -46,6 +47,8 @@
   border-radius: 10px;
   text-align: left;
   background-color: #f8f9fe;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1);
+
 }
 .logcenter a{
   color: #586299;
@@ -64,7 +67,6 @@ form{
   border: 5px solid #667f2b;
   font-size: large;
   padding: 10px;
-  cursor: pointer;
   
 }
 form label{
