--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ footer{
     background-color: #b2bee1;
     height: auto;
     width: 100vw;
-    margin-top: 20%;
+    margin-top: 30vh;
     color: #fff;
 }
 .footer-content{
