fases acima do ranking

--- a/css/apresentação.css
+++ b/css/apresentação.css
@@ -15,7 +15,7 @@ input{
      width: 300px;
    }
 .fases{
-    margin: 15% auto;
+    margin:150px auto;
     text-align: center;
     width: 90vw;
 }
