--- a/css/menu.css
+++ b/css/menu.css
@@ -1,9 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+
 }
   body{
     overflow-x: hidden;
+    font-family: 'Alegreya Sans SC', sans-serif;
   }
   
   nav a {
