--- a/css/jogos.css
+++ b/css/jogos.css
@@ -222,52 +222,110 @@ body{
 }
 
 /*matrizes*/
-
-.board {
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 33% 33% 33%;
-    gap:4px;
-    margin-top: 40px;
-    }
-  .jogo button{
-    width: 400px;
-    padding: 15px;
-    background-color: #677f27;
-    color: #fff;
-    font-size: xx-large;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 25px;
-    transition: .3s;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+.centro {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  margin-bottom: 10px;
 }
-.jogo{
-    text-align: center;
-    margin: 0 auto;
+.flexRow{
+  display: flex;
+  flex-direction: column;
+}
+
+.centro div {
+  border: 4px solid #ed9ac2;
+  height: 120px;
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 24px;
+}
+#jogada{
+  padding: 5px;
+  font-size: larger;
+}
+
+input[type="text"],
+button {
+  margin-bottom: 10px;
+}
+
+button {
+  width: 400px;
+  padding: 15px;
+  background-color: #677f27;
+  color: #fff;
+  font-size: larger;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: .3s;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+}
+
+
+/*memoria*/
+.jogo2{
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    border-radius: 20px;
     align-items: center;
-    align-content: center;
+    justify-content: center;
+    width: 80%;
+    height:95vh;
+    margin: 5vh auto 8vh;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    border-radius: 20px;
+    background-color: #fff;
+}
+  .memory-game {
+    display: flex;
+    flex-wrap: wrap;
+    width: 600px;
+    margin: 0 auto;
   }
-  .board div {
-      border: 4px solid #ED9AC2;
-      width: 170px;
-      height: 170px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 48px;
-      cursor: pointer;
-      color: #000000;
-    }
-
   
-  .clear {
-      clear: both;
+  .memory-card {
+    width: calc(25% - 10px);
+    height: 150px;
+    margin: 5px;
+    perspective: 1000px;
   }
-
+  
+  .memory-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+  }
+  
+  .front-face,
+  .back-face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+  }
+  
+  .front-face {
+    transform: rotateY(180deg);
+  }
+  
+  .memory-card.flipped .front-face {
+    transform: rotateY(0);
+  }
+  
+  .memory-card.flipped .back-face {
+    transform: rotateY(180deg);
+  }
+  
+  .memory-card.matched {
+    display: none;
+  }
+  .error-count{
+    font-size: x-large;
+    margin: 20px auto;
+  }
+  
